# pHRI_Shared_Control

./: .gitignore  .gitmodules  README.md  params.yaml  taskList.yaml  workspace.launch
Data/3d-1/: actualTraj_id1_timecost_92.914.txt  humanForce_id1.txt  pathError_id1.txt  pathRealTimeError_id1.txt  robotTraj_id1_2_16.346  robotTraj_id1_3_50.814
Data/3d-2/: actualTraj_id1_timecost_106.019.txt  humanForce_id1.txt  pathError_id1.txt  pathRealTimeError_id1.txt  robotTraj_id1_1_0.104  robotTraj_id1_2_26.358  robotTraj_id1_3_64.765
Data/3d-3/: actualTraj_id1_timecost_118.715.txt  humanForce_id1.txt  pathError_id1.txt  pathRealTimeError_id1.txt  robotTraj_id1_2_27.448  robotTraj_id1_3_69.593
Data/3d-4/: actualTraj_id1_timecost_223.997.txt  humanForce_id1.txt  pathError_id1.txt  pathRealTimeError_id1.txt  robotTraj_id1_2_54.226  robotTraj_id1_3_62.321  robotTraj_id1_4_130.357
Data/3d-5/: actualTraj_id1_timecost_169.902.txt  humanForce_id1.txt  pathError_id1.txt  pathRealTimeError_id1.txt  robotTraj_id1_2_62.661  robotTraj_id1_3_111.813
Data/3d-7/: actualTraj_id1_timecost_332.723.txt  humanForce_id1.txt  pathError_id1.txt  pathRealTimeError_id1.txt  robotTraj_id1_1_0.125  robotTraj_id1_2_54.781  robotTraj_id1_3_179.206
Data/3d-8/: actualTraj_id1_timecost_167.115.txt  pathRealTimeError_id1.txt  robotTraj_id1_1_2.096  robotTraj_id1_3_65.877
Data/3d-new1/: actualTraj_id1_timecost_111.423.txt  humanForce_id1.txt  pathError_id1.txt  pathRealTimeError_id1.txt  robotTraj_id1_2_23.362  robotTraj_id1_3_66.144
Data/3d-new2/: actualTraj_id1_timecost_115.316.txt  humanForce_id1.txt  pathError_id1.txt  pathRealTimeError_id1.txt  robotTraj_id1_2_19.853  robotTraj_id1_3_55.891
Data/path-3/: actualTraj_id1_timecost_100.621.txt  humanForce_id1.txt  pathError_id1.txt  pathRealTimeError_id1.txt  robotTraj_id1_2_11.671.txt
Data/path_1/: actualTraj_id1_timecost_105.236.txt  humanForce_id1.txt  pathError_id1.txt  pathRealTimeError_id1.txt  robotTraj_id1_2_12.765  robotTraj_id1_3_48.348  robotTraj_id1_4_50.684  robotTraj_id1_5_53.565
Data/path_2/: actualTraj_id1_timecost_103.912.txt  humanForce_id1.txt  pathError_id1.txt  pathRealTimeError_id1.txt  robotTraj_id1_2_13.246  robotTraj_id1_3_15.488  robotTraj_id1_4_48.358
Data/replan200-4/: actualTraj_id1_timecost_103.520.txt  humanForce_id1.txt  pathError_id1.txt  pathRealTimeError_id1.txt  robotTraj_id1_1_0.139.txt  robotTraj_id1_2_11.163.txt  robotTraj_id1_3_25.570.txt
Data/replan200_3/: actualTraj_id1_timecost_103.019.txt  humanForce_id1.txt  pathError_id1.txt  pathRealTimeError_id1.txt  robotTraj_id1_2_12.814  robotTraj_id1_3_15.448  robotTraj_id1_4_18.847
Data/replan380-4/: actualTraj_id1_timecost_106.617.txt  humanForce_id1.txt  pathError_id1.txt  pathRealTimeError_id1.txt  robotTraj_id1_2_12.170.txt  robotTraj_id1_3_48.616.txt  robotTraj_id1_4_52.713.txt
Data/replan380_3/: actualTraj_id1_timecost_110.334.txt  humanForce_id1.txt  pathError_id1.txt  pathRealTimeError_id1.txt  robotTraj_id1_2_13.743  robotTraj_id1_3_43.292  robotTraj_id1_4_49.539  robotTraj_id1_5_62.843  robotTraj_id1_6_65.299  robotTraj_id1_7_68.038
Data/replan500_1/: actualTraj_id1_timecost_154.720.txt  humanForce_id1.txt  pathError_id1.txt  pathRealTimeError_id1.txt  robotTraj_id1_10_65.529  robotTraj_id1_11_68.246  robotTraj_id1_12_70.766  robotTraj_id1_13_72.871  robotTraj_id1_14_75.778  robotTraj_id1_15_78.034  robotTraj_id1_16_96.103  robotTraj_id1_17_98.877  robotTraj_id1_18_101.311  robotTraj_id1_19_104.046  robotTraj_id1_20_106.988  robotTraj_id1_21_109.397  robotTraj_id1_22_112.013  robotTraj_id1_23_114.833  robotTraj_id1_24_117.374  robotTraj_id1_25_120.298  robotTraj_id1_26_123.147  robotTraj_id1_27_125.473  robotTraj_id1_28_128.269  robotTraj_id1_2_13.237  robotTraj_id1_3_16.963  robotTraj_id1_4_20.292  robotTraj_id1_5_49.736  robotTraj_id1_6_55.045  robotTraj_id1_7_57.664  robotTraj_id1_8_60.111  robotTraj_id1_9_63.107
Data/replan500_2/: actualTraj_id1_timecost_118.919.txt  humanForce_id1.txt  pathError_id1.txt  pathRealTimeError_id1.txt  robotTraj_id1_2_14.254  robotTraj_id1_3_55.314  robotTraj_id1_4_57.710  robotTraj_id1_5_60.804  robotTraj_id1_6_63.365  robotTraj_id1_7_66.033  robotTraj_id1_8_69.462  robotTraj_id1_9_72.028
Data/replan500_3/: actualTraj_id1_timecost_143.720.txt  humanForce_id1.txt  pathError_id1.txt  pathRealTimeError_id1.txt  robotTraj_id1_10_83.725  robotTraj_id1_11_86.496  robotTraj_id1_12_89.219  robotTraj_id1_13_91.772  robotTraj_id1_14_94.275  robotTraj_id1_15_96.847  robotTraj_id1_16_106.573  robotTraj_id1_17_109.243  robotTraj_id1_2_23.764  robotTraj_id1_3_30.238  robotTraj_id1_4_69.142  robotTraj_id1_5_71.501  robotTraj_id1_6_73.629  robotTraj_id1_7_76.193  robotTraj_id1_8_78.741  robotTraj_id1_9_81.330
Data/replan600-1/: actualTraj_id1_timecost_112.724.txt  humanForce_id1.txt  pathError_id1.txt  pathRealTimeError_id1.txt  robotTraj_id1_2_12.229.txt  robotTraj_id1_3_26.882.txt  robotTraj_id1_4_45.771.txt  robotTraj_id1_5_70.282.txt  robotTraj_id1_6_74.238.txt
Data/replan600-2/: actualTraj_id1_timecost_131.317.txt  humanForce_id1.txt  pathError_id1.txt  pathRealTimeError_id1.txt  robotTraj_id1_10_81.183.txt  robotTraj_id1_11_84.173.txt  robotTraj_id1_12_87.449.txt  robotTraj_id1_13_92.510.txt  robotTraj_id1_2_12.695.txt  robotTraj_id1_3_52.270.txt  robotTraj_id1_4_60.459.txt  robotTraj_id1_5_64.360.txt  robotTraj_id1_6_68.948.txt  robotTraj_id1_7_72.040.txt  robotTraj_id1_8_74.955.txt  robotTraj_id1_9_78.073.txt
Data/replan_200_1/: actualTraj_id1_timecost_129.716.txt  humanForce_id1.txt  pathError_id1.txt  pathRealTimeError_id1.txt  (+33 more)
devel/: .catkin
rviz/: first_person_view.rviz
src/local_planner/: CMakeLists.txt  package.xml
src/local_planner/include/: base_local_planner.h  teb_local_planner.h
src/local_planner/launch/: local_planner.launch
src/local_planner/scripts/: BaseLocalPlanner.py  LocalPlanner.py  LocalPlannerClass.py  MinimumLocalPlanner.py  PolyTrajectory.py  main.py  uniformPlanner.py
src/local_planner/src/: main.cpp  teb_local_planner.cpp
src/local_planner/srv/: LocalPlanning.srv
(+1793 files in other folders)
